fix spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,7 +15,7 @@ a {
     height: 80px;
     text-decoration: none;
     display: inline-block;
-    font-size: 32px;
+    font-size: 20px;
     margin-right: 16px;
 }
 
@@ -28,6 +28,6 @@ a {
     height: 80px;
     text-decoration: none;
     display: inline-block;
-    font-size: 32px;
+    font-size: 20px;
     margin-right: 16px;
 }
